refactor: remove retired product features
